--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,7 @@
   "description": "API FIREBASE",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,9 @@
   "homepage": "https://github.com/Pato07brn/IASD_JN#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "firebase": "^10.8.0"
+    "firebase-admin": "^12.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
