--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,7 @@
   "description": "API FIREBASE",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon server.js"
+    "test": "nodemon ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Pato07brn/IASD_JN#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0"
   },
