--- a/API/package.json
+++ b/API/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
