--- a/API/package.json
+++ b/API/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Pato07brn/IASD_JN#readme",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
