--- a/front_end_iasd_jn/package.json
+++ b/front_end_iasd_jn/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "firebase": "^10.8.1",
+    "firebase": "^10.9.0",
+    "firebaseui": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
