--- a/API/package.json
+++ b/API/package.json
@@ -4,6 +4,7 @@
   "description": "API FIREBASE",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/server.js ",
     "test": "nodemon ./src/server.js"
   },
   "repository": {
@@ -23,6 +24,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "firebase-admin": "^12.0.0"
